--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -42,15 +42,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AST\Commands\Command.cs" />
+    <Compile Include="AST\Commands\CommandNode.cs" />
     <Compile Include="AST\Commands\HeadNode.cs" />
-    <Compile Include="AST\Commands\Stmts\Decls\Decl.cs" />
-    <Compile Include="AST\Commands\Stmts\Decls\VarDecl.cs" />
-    <Compile Include="AST\Commands\Stmts\Stmt.cs" />
+    <Compile Include="AST\Commands\Stmts\Decls\DeclNode.cs" />
+    <Compile Include="AST\Commands\Stmts\Decls\VarDeclNode.cs" />
+    <Compile Include="AST\Commands\Stmts\StmtNode.cs" />
+    <Compile Include="AST\Expressions\BinExprNode.cs" />
+    <Compile Include="AST\Expressions\Values\BoolConst.cs" />
+    <Compile Include="AST\Expressions\Values\CollecConst.cs" />
+    <Compile Include="AST\Expressions\Values\NoneConst.cs" />
+    <Compile Include="AST\Expressions\Values\NumConst.cs" />
+    <Compile Include="AST\Expressions\Values\TextConst.cs" />
+    <Compile Include="AST\Expressions\ExprNode.cs" />
+    <Compile Include="AST\Expressions\UnaExprNode.cs" />
     <Compile Include="AST\MAGIA.cs" />
     <Compile Include="AST\Node.cs" />
     <Compile Include="Compiler\SyntaxAnalysis\Parser.cs" />
     <Compile Include="Compiler\SyntaxAnalysis\Scanner.cs" />
+    <Compile Include="Operators.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types.cs" />
