--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -49,10 +49,12 @@
     <Compile Include="AST\Commands\Stmts\Decls\VarDeclNode.cs" />
     <Compile Include="AST\Commands\Stmts\StmtNode.cs" />
     <Compile Include="AST\Expressions\BinExprNode.cs" />
+    <Compile Include="AST\Expressions\MemberNode.cs" />
     <Compile Include="AST\Expressions\Values\BoolConst.cs" />
     <Compile Include="AST\Expressions\Values\CollecConst.cs" />
     <Compile Include="AST\Expressions\Values\NoneConst.cs" />
     <Compile Include="AST\Expressions\Values\NumConst.cs" />
+    <Compile Include="AST\Expressions\Values\IdentNode.cs" />
     <Compile Include="AST\Expressions\Values\TextConst.cs" />
     <Compile Include="AST\Expressions\ExprNode.cs" />
     <Compile Include="AST\Expressions\UnaExprNode.cs" />
@@ -63,6 +65,8 @@
     <Compile Include="Operators.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SymbolTable\Object.cs" />
+    <Compile Include="SymbolTable\Reference.cs" />
     <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
