Auto stash before merge of "Sean" and "origin/xennar"

--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -46,6 +46,7 @@
     <Compile Include="AST\Commands\HeadNode.cs" />
     <Compile Include="AST\Commands\Stmts\AssignNode.cs" />
     <Compile Include="AST\Commands\Stmts\Decls\DeclNode.cs" />
+    <Compile Include="AST\Commands\Stmts\Decls\FuncDeclNode.cs" />
     <Compile Include="AST\Commands\Stmts\Decls\VarDeclNode.cs" />
     <Compile Include="AST\Commands\Stmts\StmtNode.cs" />
     <Compile Include="AST\Expressions\BinExprNode.cs" />
