--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -80,6 +80,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram2.cd" />
+    <None Include="ClassDiagram3.cd" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Compiler\CodeGeneration\" />
