Final Draft of AST structure
Contains nodes for all parts of the AST. Warning: May contain errors. Please wait until a later commit to use this, as debugging first commences after this.

--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -47,9 +47,11 @@
     <Compile Include="AST\Commands\HeadNode.cs" />
     <Compile Include="AST\Commands\Stmts\AssignNode.cs" />
     <Compile Include="AST\Commands\Stmts\Decls\DeclNode.cs" />
+    <Compile Include="AST\Commands\Stmts\Decls\EdgeDeclNode.cs" />
     <Compile Include="AST\Commands\Stmts\Decls\FuncDeclNode.cs" />
     <Compile Include="AST\Commands\Stmts\Decls\VarDeclNode.cs" />
     <Compile Include="AST\Commands\Stmts\Decls\VEDeclNode.cs" />
+    <Compile Include="AST\Commands\Stmts\Decls\VertexDeclNode.cs" />
     <Compile Include="AST\Commands\Stmts\ForeachNode.cs" />
     <Compile Include="AST\Commands\Stmts\ForNode.cs" />
     <Compile Include="AST\Commands\Stmts\IfNode.cs" />
