--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -55,12 +55,14 @@
     <Compile Include="AST\Commands\Stmts\ForeachNode.cs" />
     <Compile Include="AST\Commands\Stmts\ForNode.cs" />
     <Compile Include="AST\Commands\Stmts\IfNode.cs" />
+    <Compile Include="AST\Commands\Stmts\LoneCallNode.cs" />
+    <Compile Include="AST\Commands\Stmts\ReturnNode.cs" />
     <Compile Include="AST\Commands\Stmts\StmtNode.cs" />
     <Compile Include="AST\Commands\Stmts\WhileNode.cs" />
     <Compile Include="AST\Expressions\BinExprNode.cs" />
     <Compile Include="AST\Expressions\Identifier\CallNode.cs" />
     <Compile Include="AST\Expressions\Identifier\VarNode.cs" />
-    <Compile Include="AST\Expressions\MemberNode.cs" />
+    <Compile Include="AST\Expressions\Identifier\MemberNode.cs" />
     <Compile Include="AST\Expressions\Values\BoolConst.cs" />
     <Compile Include="AST\Expressions\Values\CollecConst.cs" />
     <Compile Include="AST\Expressions\Values\NoneConst.cs" />
