Visitor partly implemented and working.
Overhauled the flags and wrote better help msg.
Needs comments and more visitor code.

--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -80,6 +80,8 @@
     <Compile Include="AST\Stmts\ReturnNode.cs" />
     <Compile Include="AST\Stmts\StmtNode.cs" />
     <Compile Include="AST\Stmts\WhileNode.cs" />
+    <Compile Include="Visitors\SerializerVisitor.cs" />
+    <Compile Include="Visitors\Visitor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -89,8 +91,6 @@
   <ItemGroup>
     <Folder Include="Compiler\CodeGeneration\" />
     <Folder Include="Compiler\SemanticAnalysis\" />
-    <Folder Include="Visitor\PrettyPrinter\" />
-    <Folder Include="AST\Stmts\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
