Fisnishing Thouches and Cleanup. + Fixes
Two Visitors are now Done and Pretty with comments.
Example MAGIA Txt is provided. Pretty Printer Prints per the standard of Csharp Code Convention.
XMLTree printer can be used to see the Structure of the Code. Genereally Alot of big fixes and other stuff incldued.

--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -82,7 +82,8 @@
     <Compile Include="AST\Stmts\ReturnNode.cs" />
     <Compile Include="AST\Stmts\StmtNode.cs" />
     <Compile Include="AST\Stmts\WhileNode.cs" />
-    <Compile Include="Visitors\SerializerVisitor.cs" />
+    <Compile Include="Visitors\XmlTreeBuilder.cs" />
+    <Compile Include="Visitors\PrettyPrinter.cs" />
     <Compile Include="Visitors\Visitor.cs" />
   </ItemGroup>
   <ItemGroup>
