--- a/P4 Project/P4 Project/App.config
+++ b/P4 Project/P4 Project/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+	<appSettings>
+		<add key="graphVizLocation" value="C:\Program Files (x86)\Graphviz2.38\bin" />
+	</appSettings>
 </configuration>
