--- a/P4 Project/P4 Project/App.config
+++ b/P4 Project/P4 Project/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
 	<appSettings>
-		<add key="graphVizLocation" value="C:\Program Files (x86)\Graphviz2.38\bin" />
+		<add key="graphVizLocation" value="..\..\Graphviz\bin" />
 	</appSettings>
 </configuration>
