--- a/P4 Project/P4 ProjectTests/P4 ProjectTests.csproj
+++ b/P4 Project/P4 ProjectTests/P4 ProjectTests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Compiler\SyntaxAnalysis\ParserTests.cs" />
     <Compile Include="Compiler\SyntaxAnalysis\ScannerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Visitors\PrettyPrinterTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -71,6 +72,10 @@
       <Project>{93AB248B-8C1B-403E-9FAA-23EBC916EE61}</Project>
       <Name>P4 Project</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Visitors\PrettyCode.txt" />
+    <Content Include="Visitors\UglyCode.txt" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
