--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -91,6 +91,11 @@
     <Compile Include="Visitors\PrettyPrinter.cs" />
     <Compile Include="Visitors\Visitor.cs" />
     <Compile Include="Types\BaseType.cs" />
+    <Compile Include="Types\Primitives\NumberType.cs" />
+    <Compile Include="Types\Primitives\BooleanType.cs" />
+    <Compile Include="Types\Structures\VertexType.cs" />
+    <Compile Include="Types\Functions\FunctionType.cs" />
+    <Compile Include="Types\Collections\SetType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
