--- a/P4 Project/P4 Project/App.config
+++ b/P4 Project/P4 Project/App.config
@@ -1,9 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
 	<appSettings>
-		<add key="graphVizLocation" value="..\..\Graphviz\bin" />
+		<add key="graphVizLocation" value="..\..\Graphviz\bin"/>
+		<add key="graphVizLocation" value=""/>
 	</appSettings>
 </configuration>
