--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="GraphVizWrapper">
+      <HintPath>..\packages\GraphViz.NET.1.0.0\lib\net40\GraphVizWrapper.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AST\Expressions\BinExprNode.cs" />
@@ -69,7 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SymbolTable\Obj.cs" />
     <Compile Include="SymbolTable\SymbolTable.cs" />
-    <Compile Include="Types.cs" />
+    <Compile Include="TypeS.cs" />
     <Compile Include="AST\Stmts\AssignNode.cs" />
     <Compile Include="AST\Stmts\Block.cs" />
     <Compile Include="AST\Stmts\Decls\DeclNode.cs" />
@@ -96,6 +99,11 @@
     <Compile Include="Types\Structures\VertexType.cs" />
     <Compile Include="Types\Functions\FunctionType.cs" />
     <Compile Include="Types\Collections\SetType.cs" />
+    <Compile Include="Types\Primitives\TextType.cs" />
+    <Compile Include="Types\Collections\QueueType.cs" />
+    <Compile Include="Types\Collections\StackType.cs" />
+    <Compile Include="Types\Collections\CollecType.cs" />
+    <Compile Include="Types\Collections\ListType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -104,6 +112,7 @@
     <None Include="Graphviz\bin\config6" />
     <None Include="Graphviz\bin\Graphviz.ini" />
     <None Include="Graphviz\bin\Settings.ini" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Compiler\CodeGeneration\" />
