--- a/P4 Project/HandWrittenScannerParser/HandWrittenScannerParser/HandWrittenScannerParser.csproj
+++ b/P4 Project/HandWrittenScannerParser/HandWrittenScannerParser/HandWrittenScannerParser.csproj
@@ -43,9 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Inputter.cs" />
+    <Compile Include="Kinds.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scanner.cs" />
+    <Compile Include="Token.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
