--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -71,21 +71,14 @@
     <Compile Include="SymbolTable\SymbolTable.cs" />
     <Compile Include="Types.cs" />
     <Compile Include="AST\Stmts\AssignNode.cs" />
-    <Compile Include="AST\Stmts\Block.cs" />
     <Compile Include="AST\Stmts\Decls\DeclNode.cs" />
-    <Compile Include="AST\Stmts\Decls\EdgeDeclNode.cs" />
     <Compile Include="AST\Stmts\Decls\FuncDeclNode.cs" />
     <Compile Include="AST\Stmts\Decls\VarDeclNode.cs" />
-    <Compile Include="AST\Stmts\Decls\VEDeclNode.cs" />
     <Compile Include="AST\Stmts\Decls\VertexDeclNode.cs" />
-    <Compile Include="AST\Stmts\ForeachNode.cs" />
-    <Compile Include="AST\Stmts\ForNode.cs" />
     <Compile Include="AST\Stmts\HeadNode.cs" />
-    <Compile Include="AST\Stmts\IfNode.cs" />
     <Compile Include="AST\Stmts\LoneCallNode.cs" />
     <Compile Include="AST\Stmts\ReturnNode.cs" />
     <Compile Include="AST\Stmts\StmtNode.cs" />
-    <Compile Include="AST\Stmts\WhileNode.cs" />
     <Compile Include="Visitors\TypeVisitor.cs" />
     <Compile Include="Visitors\XmlTreeBuilder.cs" />
     <Compile Include="Visitors\PrettyPrinter.cs" />
@@ -103,6 +96,13 @@
     <Compile Include="Types\Collections\ListType.cs" />
     <Compile Include="Types\Structures\EdgeType.cs" />
     <Compile Include="Types\Structures\GraphType.cs" />
+    <Compile Include="AST\Stmts\EdgeCreateNode.cs" />
+    <Compile Include="AST\Stmts\BlockNode.cs" />
+    <Compile Include="AST\Stmts\ForeachNode.cs" />
+    <Compile Include="AST\Stmts\ForNode.cs" />
+    <Compile Include="AST\Stmts\IfNode.cs" />
+    <Compile Include="AST\Stmts\WhileNode.cs" />
+    <Compile Include="AST\Stmts\Decls\MultiDecl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
