--- a/P4 Project/P4 ProjectTests/P4 ProjectTests.csproj
+++ b/P4 Project/P4 ProjectTests/P4 ProjectTests.csproj
@@ -63,6 +63,8 @@
     <Compile Include="Compiler\SyntaxAnalysis\ScannerTests.cs" />
     <Compile Include="Graphviz\DotToPngTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SymbolTable\ObjTests.cs" />
+    <Compile Include="SymbolTable\SymbolTableTests.cs" />
     <Compile Include="Visitors\XmlTreeBuilderTests.cs" />
     <Compile Include="Visitors\PrettyPrinterTests.cs" />
   </ItemGroup>
