Imported MS.configuration dll to allow relative path
Fixed the rest of the test all test should not work perfectly.

--- a/P4 Project/P4 ProjectTests/P4 ProjectTests.csproj
+++ b/P4 Project/P4 ProjectTests/P4 ProjectTests.csproj
@@ -48,6 +48,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -177,7 +179,9 @@
     <Content Include="Visitors\TestCode\UglyCode.txt" />
     <Content Include="Visitors\TestCode\xmltree.xml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
