Added scope tests and moved relevant cleaner tests over

--- a/P4 Project/P4 ProjectTests/P4 ProjectTests.csproj
+++ b/P4 Project/P4 ProjectTests/P4 ProjectTests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="SymbolTable\ObjTests.cs" />
     <Compile Include="SymbolTable\SymbolTableTests.cs" />
     <Compile Include="Visitors\CleanerTests.cs" />
+    <Compile Include="Visitors\ScopeTests.cs" />
     <Compile Include="Visitors\XmlTreeBuilderTests.cs" />
     <Compile Include="Visitors\PrettyPrinterTests.cs" />
   </ItemGroup>
