--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -70,9 +70,9 @@
     <Compile Include="AST\Node.cs" />
     <Compile Include="AST\Stmts\BreakNode.cs" />
     <Compile Include="AST\Stmts\ContinueNode.cs" />
-    <Compile Include="Compiler\Interpreter\edge.cs" />
-    <Compile Include="Compiler\Interpreter\Interpreter.cs" />
-    <Compile Include="Compiler\Interpreter\vertex.cs" />
+    <Compile Include="Compiler\Interpreter\Edge.cs" />
+    <Compile Include="Compiler\Interpreter\Interpreter .cs" />
+    <Compile Include="Compiler\Interpreter\Vertex.cs" />
     <Compile Include="Compiler\SyntaxAnalysis\Parser.cs" />
     <Compile Include="Compiler\SyntaxAnalysis\Scanner.cs" />
     <Compile Include="Graphviz\DotToPng.cs" />
