--- a/P4 Project/P4 ProjectTests/P4 ProjectTests.csproj
+++ b/P4 Project/P4 ProjectTests/P4 ProjectTests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{466156B2-B7E6-46EF-A234-9554D142BCA8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>P4_ProjectTests1</RootNamespace>
-    <AssemblyName>P4 ProjectTests1</AssemblyName>
+    <RootNamespace>P4_ProjectTests</RootNamespace>
+    <AssemblyName>P4 ProjectTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
