--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 **/.idea/shelf/*
 **/.idea/dictionaries
 
+*.DS_Store
+
 # Sensitive or high-churn files
 **/.idea/**/dataSources/
 **/.idea/**/dataSources.ids
