Support for generating Dot Code and saving Dot code in var

--- a/P4 Project/P4 Project/P4 Project.csproj
+++ b/P4 Project/P4 Project/P4 Project.csproj
@@ -77,7 +77,7 @@
     <Compile Include="Compiler\Interpreter\Value.cs" />
     <Compile Include="Compiler\SyntaxAnalysis\Parser.cs" />
     <Compile Include="Compiler\SyntaxAnalysis\Scanner.cs" />
-    <Compile Include="Graphviz\DotToPng.cs" />
+    <Compile Include="Graphviz\DotOutputGenerator.cs" />
     <Compile Include="Operators.cs" />
     <Compile Include="PreDefined.cs" />
     <Compile Include="Program.cs" />
